==> dj140/STM32G4_Simplefoc/Drivers/pwm.c <==
/*
 * MIT License
 * Copyright (c) 2019 _VIFEXTech
 * 
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 * 
 * The above copyright notice and this permission notice shall be included in all
 * copies or substantial portions of the Software.
 * 
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 * SOFTWARE.
 */
#include "pwm.h"
#include "timer.h"
#include "Arduino.h"

/**
  * @brief  定时器输出捕获初始化
  * @param  TIMx: 定时器地址
  * @param  arr: 自动重装值
  * @param  psc: 时钟预分频数
  * @param  TimerChannel: 定时器通道
  * @retval 无
  */
void TIMx_OCxInit(TIM_TypeDef* TIMx, uint16_t arr, uint16_t psc, uint8_t TimerChannel)
{
    LL_TIM_InitTypeDef TIM_TimeBaseStructure;
    LL_TIM_OC_InitTypeDef TIM_OCInitStructure;
    
//    if(!IS_TIM_ALL_PERIPH(TIMx))
//        return;
    
    TimerClockCmd(TIMx, ENABLE);

    TIM_TimeBaseStructure.Autoreload = arr;
    TIM_TimeBaseStructure.Prescaler = psc;
    TIM_TimeBaseStructure.ClockDivision = 0;
    TIM_TimeBaseStructure.CounterMode = LL_TIM_COUNTERMODE_UP;
    LL_TIM_Init(TIMx, &TIM_TimeBaseStructure);
	
	  TIM_OCInitStructure.OCMode = LL_TIM_OCMODE_PWM2;
    TIM_OCInitStructure.OCState = LL_TIM_OCSTATE_ENABLE;
    TIM_OCInitStructure.OCNState = LL_TIM_OCSTATE_ENABLE;
    TIM_OCInitStructure.OCPolarity = LL_TIM_OCPOLARITY_LOW;
    TIM_OCInitStructure.OCNPolarity = LL_TIM_OCPOLARITY_HIGH;
    TIM_OCInitStructure.OCIdleState = LL_TIM_OCIDLESTATE_HIGH;
    TIM_OCInitStructure.OCNIdleState = LL_TIM_OCIDLESTATE_LOW;
		
    switch(TimerChannel)
    {
    case 1:
        LL_TIM_OC_Init(TIMx, LL_TIM_CHANNEL_CH1, &TIM_OCInitStructure);
		    LL_TIM_OC_EnablePreload(TIMx, LL_TIM_CHANNEL_CH1);
//        TIM_OC1PreloadConfig(TIMx, TIM_OCPreload_Enable);
        break;
    case 2:
        LL_TIM_OC_Init(TIMx, LL_TIM_CHANNEL_CH2, &TIM_OCInitStructure);
				LL_TIM_OC_EnablePreload(TIMx, LL_TIM_CHANNEL_CH2);
//        TIM_OC2PreloadConfig(TIMx, TIM_OCPreload_Enable);
        break;
    case 3:
        LL_TIM_OC_Init(TIMx, LL_TIM_CHANNEL_CH3, &TIM_OCInitStructure);
		    LL_TIM_OC_EnablePreload(TIMx, LL_TIM_CHANNEL_CH3);		
//        TIM_OC3PreloadConfig(TIMx, TIM_OCPreload_Enable);
        break;
    case 4:
        LL_TIM_OC_Init(TIMx, LL_TIM_CHANNEL_CH4, &TIM_OCInitStructure);
		    LL_TIM_OC_EnablePreload(TIMx, LL_TIM_CHANNEL_CH4);		
//        TIM_OC4PreloadConfig(TIMx, TIM_OCPreload_Enable);
        break;
		case 5:
        LL_TIM_OC_Init(TIMx, LL_TIM_CHANNEL_CH5, &TIM_OCInitStructure);
		    LL_TIM_OC_EnablePreload(TIMx, LL_TIM_CHANNEL_CH5);		
//        TIM_OC5PreloadConfig(TIMx, TIM_OCPreload_Enable);
        break;
    case 6:
        LL_TIM_OC_Init(TIMx, LL_TIM_CHANNEL_CH6, &TIM_OCInitStructure);
		    LL_TIM_OC_EnablePreload(TIMx, LL_TIM_CHANNEL_CH6);		
//        TIM_OC6PreloadConfig(TIMx, TIM_OCPreload_Enable);
        break;
    }

//    TIM_Cmd(TIMx, ENABLE);
//    TIM_CtrlPWMOutputs(TIMx, ENABLE);
		LL_TIM_EnableCounter(TIMx);
		LL_TIM_EnableAllOutputs(TIMx);
    
}

/**
  * @brief  PWM输出初始化
  * @param  Pin:引脚编号
  * @param  PWM_DutyCycle: PWM分级数
  * @param  PWM_Frequency: PWM频率
  * @retval 引脚对应的定时器通道
  */
uint8_t PWM_Init(uint8_t Pin, uint16_t PWM_DutyCycle, uint32_t PWM_Frequency)
{
    uint32_t arr, psc;
    
    if(!IS_PWM_PIN(Pin))
        return 0;
    
    if(PWM_DutyCycle == 0 || PWM_Frequency == 0 || (PWM_DutyCycle * PWM_Frequency) > F_CPU)
        return 0;

    pinMode(Pin, OUTPUT_AF);
    //GPIO_PinAFConfig(PIN_MAP[Pin].GPIOx, TIM_GetPinSourcex(Pin), TIM_GetGPIO_AF(Pin));
    LL_GPIO_SetAFPin_0_7(PIN_MAP[Pin].GPIOx, TIM_GetPinSourcex(Pin), TIM_GetGPIO_AF(Pin));
    arr = PWM_DutyCycle;
    psc = F_CPU / PWM_DutyCycle / PWM_Frequency;
    
//    if(!IS_APB2_TIM(PIN_MAP[Pin].TIMx))
//        psc /= 2;

//    TIM_Cmd(PIN_MAP[Pin].TIMx, DISABLE);
		LL_TIM_DisableCounter(PIN_MAP[Pin].TIMx);
    TIMx_OCxInit(PIN_MAP[Pin].TIMx, arr - 1, psc - 1, PIN_MAP[Pin].TimerChannel);
    return PIN_MAP[Pin].TimerChannel;
}

/**
  * @brief  获取引脚对应的定时器复用编号
  * @param  Pin: 引脚编号
  * @retval 定时器复用编号
  */
uint8_t TIM_GetGPIO_AF(uint8_t Pin)
{   
    uint8_t GPIO_AF_x = 0;
    TIM_TypeDef* TIMx = PIN_MAP[Pin].TIMx;

    if(TIMx == TIM2 || TIMx == TIM15 || TIMx == TIM16 || TIMx == TIM7)
    {
        GPIO_AF_x = LL_GPIO_AF_1;
    }
    else if(TIMx == TIM16 || TIMx == TIM17)
    {
        GPIO_AF_x = LL_GPIO_AF_5;
    }
    else if(TIMx == TIM1)
    {
        GPIO_AF_x = LL_GPIO_AF_6;
    }
    else if(TIMx == TIM15)
    {
        GPIO_AF_x = LL_GPIO_AF_9;
    }

    return GPIO_AF_x;
}

/**
  * @brief  输出PWM信号
  * @param  Pin: 引脚编号
  * @param  val:PWM占空比值
  * @retval PWM占空比值
  */
uint16_t pwmWrite(uint8_t Pin, uint16_t val)
{
    switch(PIN_MAP[Pin].TimerChannel)
    {
    case 1:
        PIN_MAP[Pin].TIMx->CCR1 = val;
        break;
    case 2:
        PIN_MAP[Pin].TIMx->CCR2 = val;
        break;
    case 3:
        PIN_MAP[Pin].TIMx->CCR3 = val;
        break;
    case 4:
        PIN_MAP[Pin].TIMx->CCR4 = val;
        break;
    case 5:
        PIN_MAP[Pin].TIMx->CCR5 = val;
        break;
    case 6:
        PIN_MAP[Pin].TIMx->CCR6 = val;
        break;
    }
    return val;
}

/**
  * @brief  获取捕获值
  * @param  TIMx: 定时器地址
  * @param  TimerChannel: 定时器通道
  * @retval 捕获值
  */
uint16_t timer_get_compare(TIM_TypeDef* TIMx, uint8_t TimerChannel)
{
    uint16_t compare = 0;
    switch(TimerChannel)
    {
    case 1:
        compare = TIMx->CCR1;
        break;
    case 2:
        compare = TIMx->CCR2;
        break;
    case 3:
        compare = TIMx->CCR3;
        break;
    case 4:
        compare = TIMx->CCR4;
        break;
    case 5:
        compare = TIMx->CCR5;
        break;
    case 6:
        compare = TIMx->CCR6;
        break;
    }
    return compare;
}

/**
  * @brief  更新定时器时钟预分频数
  * @param  TIMx: 定时器地址
  * @param  psc: 时钟预分频数
  * @retval 无
  */
void timer_set_prescaler(TIM_TypeDef* TIMx, uint16_t psc)
{
    TIMx->PSC = psc;
}

/**
  * @brief  更新定时器自动重装值
  * @param  TIMx: 定时器地址
  * @param  arr: 自动重装值
  * @retval 无
  */
void timer_set_reload(TIM_TypeDef* TIMx, uint16_t arr)
{
    TIMx->ARR = arr;
}

/**
  * @brief  应用定时器更改
  * @param  TIMx: 定时器地址
  * @retval 无
  */
void timer_generate_update(TIM_TypeDef* TIMx)
{
//    TIMx->EGR = TIM_PSCReloadMode_Immediate;
	LL_TIM_GenerateEvent_UPDATE(TIMx);
}
